# kafkaux

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: package.yml
src/kafkaux/: __init__.py  main.py  util.py
src/kafkaux/config/: __init__.py  config.py  parser.py
src/kafkaux/kafka/: __init__.py  consumer.py  filter.py  model.py  service.py
tests/: conftest.py  test_config.py  test_main.py  test_metadata.py  test_placeholder.py
