[project]
name = "kafkaux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "symonk", email = "jackofspaces@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
