[project]
name = "kafkaux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "symonk", email = "jackofspaces@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.11.1",
    "pydantic>=2.11.9",
    "typer>=0.19.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "testcontainers[kafka]>=4.13.0",
]

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers"
]

[scripts]
cover = "pytest --cov=src/kafkaux --cov-report=term-missing"